# evez-atlas

./: .env.example  .gitignore  COMPLETE_SYSTEM_SUMMARY.md  CONTRIBUTING.md  DEMONSTRATE_144000.md  DEPLOYMENT.md  DIVINE_GOSPEL_SYSTEM_COMPLETE.md  DIVINE_INTEGRATION_COMPLETE.md  Dockerfile.fsc  Dockerfile.spine  ENHANCED_GRANT_LOAN_SYSTEM.md  ETHICAL_FRAMEWORK.md  Evo.prompt.yml  GNW-QTM_Orchestrator.md  HEARTBEAT.md  HONEST_INVENTORY_REPORT.md  IDENTITY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ENHANCED.md  MASTER_MANIFEST.json  MATRIX_GATEWAY_COMPLETE.md  MEMORY.md  MOLTBOOK_INTEGRATION_COMPLETE.md  MOLTBOOK_MASTER_ORCHESTRATOR_COMPLETE.md  MOLTBOOK_VERIFICATION.md  Makefile  ONE_CIRCUIT_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  PHONE_ONLY.md  PROFIT_CIRCUIT_MANIFEST.md  QUICKSTART.md  QUICK_START.md  README-ATLAS.md  README.md  SECURITY.md  SEMANTIC_IMPLEMENTATION_COMPLETE.md  SOUL.md  SPONSORS.md  SYSTEM_VALIDATION_COMPLETE.md  (+28 more)
.devcontainer/: devcontainer.json  postAttach.sh  setup-atlas.sh  setup-openclaw.sh
.github/: FUNDING.yml  ci-health.md  policy-allowlist.txt
.openclaw/: workspace-state.json
.roo/: archonic-manifest.json
actions/: MARKETPLACE_STRATEGY.md  README.md
architecture/: evez_breakthrough.json  evez_operator_networks.json
bounty-projects/llm-cost-optimizer/: README.md  pyproject.toml  requirements.txt  sample_usage.json
bounty-projects/llm-cost-optimizer/llm_cost_optimizer/: __init__.py  cli.py
circuit/: spine-http-server.ts
core/: openclaw_gateway.py  swarm_prompting.py
docs/: SAFETY.md  (+19 more)
(+417 files in other folders)
