[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "llm-cost-optimizer"
version = "1.0.0"
description = "Analyze LLM API usage patterns and reduce costs by 50%+"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.scripts]
llm-cost = "llm_cost_optimizer.cli:cli"
